# ha-spa-care

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/spa_care/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  services.py  services.yaml  spa-care-card.js  strings.json
custom_components/spa_care/domain/: chemistry.py  models.py  products.py  recommendations.py  rules.py
custom_components/spa_care/translations/: en.json
dashboard/: README.md  spa-care-card.js
docs/: example-automation.yaml
tests/domain/: test_chemistry.py  test_models.py  test_products.py  test_recommendations.py  test_rules.py
tests/ha/: test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_number.py  test_sensor.py  test_services.py
